<resources>
    <string name="app_name">Mercari</string>
    <string name="e_mail">E-mail</string>
    <string name="email_toast">Por favor preencha o campo e-mail.</string>
    <string name="category">category</string>
    <string name="category_url">category_url</string>
    <string name="token">token</string>
    <string name="connection_error">Error requesting data. Please check your connection or try again later</string>
    <string name="function_not_implemented">Function not yet implemented</string>
    <string name="categories">categories</string>
    <string name="categories_hashmap">categories_hashmap</string>
    <string name="products">products</string>
    <string name="dialog_wait">Please wait</string>
    <string name="dialog_retrieving">Retrieving products...</string>
    <string name="men_category">Men</string>
    <string name="all_category">All</string>
    <string name="women_category">Women</string>
    <string name="showing_dialog">IS_SHOWING_DIALOG</string>
    <string name="empty_error_activity">Sorry, it\'s not possible to retrieve data from server right now. Please check your connection or tap here to try again.</string>
    <string name="empty_error_fragment">Sorry, it\'s not possible to retrieve data from server right now. Please check your connection or swipe down to try again.</string>
    <string name="menu_default">Default</string>
    <string name="menu_name">Sort by product name</string>
    <string name="menu_status">Sort by product status</string>
    <string name="menu_price">Sort by product price</string>
    <string name="menu_likes">Sort by # of likes</string>
    <string name="menu_comments">Sort by # of comments</string>

</resources>
